# Chronon-API

./: CMakeLists.txt
include/: APICore.h  API_1_0.h
include/ChrononAPI/: iJsonAPI.h
